@startuml

title __SRC's Class Diagram__\n

  namespace  {
    class DellXPS {
        + getDescription()
        ~ DellXPS()
    }
  }
  

  namespace  {
    class DellXPSDetailsFactory {
        + createDisplay()
        + createGraphicCard()
        + createProcessor()
        + createSSD()
    }
  }
  

  namespace  {
    class DellXPSDisplay {
        + toString()
    }
  }
  

  namespace  {
    class DellXPSFactory {
        + createComputer()
    }
  }
  

  namespace  {
    class DellXPSGraphicCard {
        + toString()
    }
  }
  

  namespace  {
    class DellXPSProcessor {
        + toString()
    }
  }
  

  namespace  {
    class DellXPSSSD {
        + toString()
    }
  }
  

  namespace  {
    interface Display {
        {abstract} + toString()
    }
  }
  

  namespace  {
    interface GraphicCard {
        {abstract} + toString()
    }
  }
  

  namespace  {
    abstract class Laptop {
        + toString()
        {abstract} ~ getDescription()
    }
  }
  

  namespace  {
    interface LaptopDetailsFactory {
        {abstract} + createDisplay()
        {abstract} + createGraphicCard()
        {abstract} + createProcessor()
        {abstract} + createSSD()
    }
  }
  

  namespace  {
    interface LaptopFactory {
        {abstract} + createComputer()
    }
  }
  

  namespace  {
    class MacBook {
        + getDescription()
        ~ MacBook()
    }
  }
  

  namespace  {
    class MacBookDetailsFactory {
        + createDisplay()
        + createGraphicCard()
        + createProcessor()
        + createSSD()
    }
  }
  

  namespace  {
    class MacBookDisplay {
        + toString()
    }
  }
  

  namespace  {
    class MacBookFactory {
        + createComputer()
    }
  }
  

  namespace  {
    class MacBookGraphicCard {
        + toString()
    }
  }
  

  namespace  {
    class MacBookProcessor {
        + toString()
    }
  }
  

  namespace  {
    class MacBookSSD {
        + toString()
    }
  }
  

  namespace  {
    interface Processor {
        {abstract} + toString()
    }
  }
  

  namespace  {
    interface SSD {
        {abstract} + toString()
    }
  }
  

  namespace  {
    class TestDrive {
        {static} + main()
    }
  }
  

  DellXPS -up-|> Laptop
  DellXPSDetailsFactory .up.|> LaptopDetailsFactory
  DellXPSDisplay .up.|> Display
  DellXPSFactory .up.|> LaptopFactory
  DellXPSGraphicCard .up.|> GraphicCard
  DellXPSProcessor .up.|> Processor
  DellXPSSSD .up.|> SSD
  Laptop o-- Display : display
  Laptop o-- GraphicCard : graphicCard
  Laptop o-- Processor : processor
  Laptop o-- SSD : ssd
  MacBook -up-|> Laptop
  MacBookDetailsFactory .up.|> LaptopDetailsFactory
  MacBookDisplay .up.|> Display
  MacBookFactory .up.|> LaptopFactory
  MacBookGraphicCard .up.|> GraphicCard
  MacBookProcessor .up.|> Processor
  MacBookSSD .up.|> SSD


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
